# gitissues-cli

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  jsonOut.json  registry.txt
include/gitissues/: allocator.h  defines.h  errs.h  global.h  issue.h  log.h  tag.h  umbra_string.h
include/gitissues/ecs/: component_pool.h  entity.h  paged_array.h  registry.h  string_map.h
include/gitissues/json/: json.h
include/gitissues/tests/: allocator.h  ecs.h  json.h  test.h
jni/: CMakeLists.txt  generate_headers.sh
jni/include/: gitissues_GitIssues.h
jni/java/gitissues/: GitIssues.java
jni/src/: gitissues_jni.c
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/bindings/: build.gradle.kts
kotlin/bindings/src/main/kotlin/: Codec.kt  GitIssues.kt  Issue.kt  Registry.kt  Tag.kt
kotlin/cli/: build.gradle.kts
kotlin/cli/src/main/kotlin/: Main.kt
kotlin/jni/: CMakeLists.txt  build.gradle.kts
kotlin/jni/java/src/main/java/gitissues/jni/: GitIssues.java  GitIssuesCodec.java
kotlin/jni/src/: gitissues_jni.c
src/: allocator.c  global.c  issue.c  main.c  tag.c  umbra_string.c
src/ecs/: component_pool.c  entity.c  paged_array.c  registry.c  string_map.c
src/json/: json.c
src/tests/: allocator.c  ecs.c  json.c  test.c
